--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 
 .rounded {
-    border-radius: 50px;
+    border-radius: 100%;
     height: 150px;
     width: 150px;
     display: block;
@@ -23,7 +23,8 @@
 }
 
 img {
-    margin-top: 25px;
+  border-radius: 50px;
+  margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
  
