--- a/style.css
+++ b/style.css
@@ -11,18 +11,20 @@
 nav{
   height: 10vh;
   /*background: rgba(242, 171, 38, 1);*/
-  width: 100vh;
+  width: 100hv;
+  
+
 }
 
 .nav-links{
   display: flex;
   list-style: none;
-  width: 50%;
+  width: 30%;
   height: 100%;
   /*background-color: coral;*/
   justify-content: space-around;
   align-items: center;
-  margin-left: auto;
+  margin: auto;
 
 }
 
@@ -39,13 +41,14 @@ nav{
 .landing {
   height: 90vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  
 
 }
 .gucci{
   height: 300px;
-  margin-left: auto;
+  
 }
 
 .landing h1{
@@ -78,6 +81,8 @@ nav{
   }
 
   .nav-links{
+    top: -20px;
+    left: -20px;
     position: fixed;
     background: rgba(242, 171, 38, 1);
     height: 100vh;
@@ -104,13 +109,13 @@ nav{
     font-size: 25px;
   }
   .nav-links li:nth-child(1){
-    transition: all 0.5s ease 0.2s;
+    transition: all 0.5s ease 1s;
   }
   .nav-links li:nth-child(2){
-    transition: all 0.5s ease 0.4s;
+    transition: all 0.5s ease 2s;
   }
   .nav-links li:nth-child(3){
-    transition: all 0.5s ease 0.6s;
+    transition: all 0.5s ease 4s;
   }
   li.fade {
     opacity: 0;
@@ -125,6 +130,7 @@ nav{
     display: block;
     object-fit:cover;
     border: 10px solid rgba(242, 171, 38, 1);
+   
     
    
 }
@@ -211,3 +217,43 @@ h3 {
 
   
   /*601-800*/
+
+  /*contact*/
+
+  #contact {
+    color: white;
+  }
+  .contact-section{
+    margin-top: 50px;
+    padding: 40px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  
+  }
+ 
+ .contact-form{
+   margin: auto;
+   padding: 0 10px;
+   overflow: hidden;
+   
+ }
+ .contact-form-text{
+   display: block;
+   width: 100%;
+   box-sizing: border-box;
+   margin: 16px 0;
+   border: 0;
+   background:  white;
+   transition: 0.5s;
+   
+
+ }
+ .contact-form-text:focus{
+   box-shadow: 0 0 10px 4px rgba(242, 171, 38, 1);
+ }
+
+ textarea.contact-form-text{
+   resize: none;
+   height: 120px;
+ }
